{
  "dogs": "Dogs",
  "cats": "Cats"
}